a couple small corrections on mobile

--- a/app/assets/stylesheets/mobile.sass
+++ b/app/assets/stylesheets/mobile.sass
@@ -57,7 +57,7 @@
     background: image-url('logo-mobile.png') no-repeat
     width: 172px
     height: 28px
-    margin: 45px auto
+    margin: 25px auto
 
   input[type=text], input[type=email]
     margin: 0 auto
@@ -231,7 +231,7 @@
     padding: 3px 5px
     +round(4px)
     +group
-    width: 78px
+    width: 80px
     text-align: center
     margin-top: 10px
     float: left
